--- a/frontend/pdf-chat/src/app/app.component.html
+++ b/frontend/pdf-chat/src/app/app.component.html
@@ -13,19 +13,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active text-white" aria-current="page" href="#"
-            >Home</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#">Link</a>
-        </li>
-      </ul>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0"></ul>
       @if (!isAuthenticated) {
       <button
-        class="btn btn-success"
+        class="btn btn-success btn-margin"
         type="button"
         data-bs-toggle="modal"
         data-bs-target="#loginModal"
@@ -41,7 +32,15 @@
         Register
       </button>
       } @else { @if (user?.isAdmin) {
-      <button class="btn btn-success" type="button">Add PDF</button>
+      <button
+        class="btn btn-success btn-margin"
+        type="button"
+        data-bs-toggle="modal"
+        data-bs-target="#addPdfModal"
+      >
+        <i class="bi bi-file-earmark-arrow-up"></i>
+        Upload PDF
+      </button>
       }
       <button class="btn btn-danger" type="button" (click)="logout()">
         Logout
@@ -193,6 +192,45 @@
   </div>
 </div>
 
+<div id="addPdfModal" class="modal" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Upload new PDF</h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="input-group mb-3">
+          <input
+            class="form-control"
+            type="file"
+            id="formFile"
+            (change)="onFileSelected($event)"
+          />
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Cancel
+        </button>
+        <button
+          type="button"
+          class="btn btn-primary"
+          data-bs-dismiss="modal"
+          (click)="onUpload()"
+        >
+          Upload
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
 @if (showSuccess) {
 <div class="alert alert-success" role="alert">
   {{ successMessage }}
@@ -205,8 +243,7 @@
 <div class="alert alert-info" role="alert">
   {{ infoMessage }}
 </div>
-}
-
+} @if (isAuthenticated) {
 <div class="container-fluid chat-container">
   <div class="row flex-nowrap">
     <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
@@ -218,10 +255,11 @@
           id="menu"
         >
           <button
-            class="btn btn-primary"
+            class="btn btn-primary chat-add-button"
             data-bs-toggle="modal"
             data-bs-target="#createChatModal"
           >
+            <i class="bi bi-plus"></i>
             Add Chat
           </button>
           @for (chat of user?.chats; track $index) {
@@ -246,7 +284,7 @@
         [isTyping]="chat.messages?.at(-1)?.answer !== undefined ? false : true"
         class="chat"
       ></app-chat>
-      } }
+      } } @if (activeChat !== "") {
       <div class="chat-input">
         <div class="input-group">
           <input
@@ -256,14 +294,33 @@
             aria-label="Users question"
             aria-describedby="question-addon"
             [(ngModel)]="question"
+            [disabled]="waitingForAnswer"
           />
           <div class="input-group-append chat-window">
-            <button class="btn btn-outline-secondary" type="button" (click)="addMessage()">
+            <button
+              class="btn btn-outline-secondary"
+              type="button"
+              (click)="addMessage()"
+              [disabled]="waitingForAnswer"
+            >
               Send
+              <i class="bi bi-send"></i>
             </button>
           </div>
         </div>
       </div>
+      }@else {
+      <div class="not-selected-chat">
+        <h1 class="display-1">Welcome to PDF-Chat</h1>
+        <p class="lead">Please select a chat to start chatting</p>
+      </div>
+      }
     </div>
   </div>
 </div>
+}@else{
+<div class="not-authenticated-container">
+  <h1 class="display-1">Welcome to PDF-Chat</h1>
+  <p class="lead">Please login or register to use the chat</p>
+</div>
+}
